--- a/Driven/projeto7-instagramreact/projeto7-instagramreact/public/index.html
+++ b/Driven/projeto7-instagramreact/projeto7-instagramreact/public/index.html
@@ -9,7 +9,7 @@
       rel="stylesheet">
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
-    <title>PROJETO Instagram</title>
+    <title>Instagram</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
